@@ -68,7 +68,8 @@ ifndef $(STRIPTOOL)
     STRIPTOOL = strip
 endif
 
-#also to try -- use --prefix=/usr/my-libc2.0.7-stuff
+# TODO: Try compiling vs other libcs.  See what -nostdinc and -nostdlib do for that.
+# also try --prefix=/usr/my-libc-stuff
 
 # -D_GNU_SOURCE is needed because environ is used in init.c
 ifeq ($(DODEBUG),true)
@@ -78,8 +79,6 @@ ifeq ($(DODEBUG),true)
 else
     CFLAGS  += -Wall $(OPTIMIZATION) -fomit-frame-pointer -fno-builtin -D_GNU_SOURCE
     LDFLAGS  = -s
-    #CFLAGS  += -nostdinc -I/home/andersen/apps/newlib/src/newlib/libc/include -Wall $(OPTIMIZATION) -fomit-frame-pointer -fno-builtin -D_GNU_SOURCE
-    #LDFLAGS  = -nostdlib -s -L/home/andersen/apps/newlib/src/newlib/libc.a
     STRIP    = $(STRIPTOOL) --remove-section=.note --remove-section=.comment $(PROG)
     #Only staticly link when _not_ debugging 
     ifeq ($(DOSTATIC),true)
